added commandlines for resteasy and cxf-client #4087